add comments to code/tex update

--- a/tex/jmlr2e.sty
+++ b/tex/jmlr2e.sty
@@ -69,9 +69,9 @@
 %\marginparwidth 0.75 true in
 %\topmargin 0 true pt           % Nominal distance from top of page to top of
 %\topmargin 0.125in
-\topmargin -1in
+\topmargin -.5in
 \addtolength{\headsep}{0.5in}
-\textheight 9.5 true in       % Height of text (including footnotes & figures)
+\textheight 8.5 true in       % Height of text (including footnotes & figures)
 \textwidth 6.6 true in        % Width of text line.
 \widowpenalty=10000
 \clubpenalty=10000
