--- a/tex/sections/appendix.tex
+++ b/tex/sections/appendix.tex
@@ -1,23 +1,23 @@
-\section{Local bandwidth of two synthetic example}
+    % \section{Local bandwidth of two synthetic example}
 
 
-\captionsetup[subfigure]{labelformat=empty}
-\begin{figure}[H]
-    \centering 
-\begin{subfigure}[b]{.48\textwidth} 
-    \scalebox{1}{\includegraphics[width=\textwidth]{figures/bwsurf_grid.png}}
-    \caption{(a)\label{fig:surf_grid}}
-\end{subfigure}
-\hfill
-\centering
-\begin{subfigure}[b]{0.48\textwidth}
-    \scalebox{1}{\includegraphics[width=\textwidth]{figures/bwsurf_mix.png}}
-    \caption{(b)\label{fig:surf_mix}}
-\end{subfigure}
+    % \captionsetup[subfigure]{labelformat=empty}
+    % \begin{figure}[H]
+    %     \centering 
+    % \begin{subfigure}[b]{.48\textwidth} 
+    %     \scalebox{1}{\includegraphics[width=\textwidth]{figures/bwsurf_grid.png}}
+    %     \caption{(a)\label{fig:surf_grid}}
+    % \end{subfigure}
+    % \hfill
+    % \centering
+    % \begin{subfigure}[b]{0.48\textwidth}
+    %     \scalebox{1}{\includegraphics[width=\textwidth]{figures/bwsurf_mix.png}}
+    %     \caption{(b)\label{fig:surf_mix}}
+    % \end{subfigure}
 
-\caption{Local bandwidth value for $4\times 4$ Gaussian grid (\cref{fig:surf_grid}) and 2-component Gaussian mixture (\cref{fig:surf_mix}).}
-\label{fig:bwsurface}
-\end{figure}
+    % \caption{Local bandwidth value for $4\times 4$ Gaussian grid (\cref{fig:surf_grid}) and 2-component Gaussian mixture (\cref{fig:surf_mix}).}
+    % \label{fig:bwsurface}
+    % \end{figure}
 
 
 
