--- a/tex/sources.bib
+++ b/tex/sources.bib
@@ -61,3 +61,15 @@
   pages={276--284},
   year={2016}
 }
+
+
+@article{blei2017variational,
+  title={Variational inference: A review for statisticians},
+  author={David Blei and  Alp Kucukelbir and Jon McAuliffe},
+  journal={Journal of the American Statistical Association},
+  volume={112},
+  number={518},
+  pages={859--877},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
